--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/pdehaan/hibp-stats/issues"
   },
   "dependencies": {
-    "axios": "0.18.0"
+    "axios": "^0.19.0"
   },
   "devDependencies": {},
   "homepage": "https://github.com/pdehaan/hibp-stats#readme",
